[package]
name = "options_market_data_simulator"
version = "0.1.0"
authors = ["thomas-kunnumpurath"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
structopt = "0.3"